third_party/move/move-compiler-v2/tests/checking/typing/lambda_typed.exp

Diagnostics:
error: expected function type has argument of type `(&T, u64)` but `&T` was provided
   ┌─ tests/checking/typing/lambda_typed.move:40:13
   │
40 │             action(XVector::borrow(v, i), i); // expected to have wrong argument count
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected function type has argument of type `u64` but `&T` was provided
   ┌─ tests/checking/typing/lambda_typed.move:48:13
   │
48 │             action(i); // expected to have wrong argument type
   │             ^^^^^^^^^

error: cannot use `()` with an operator which expects a value of type `u64`
   ┌─ tests/checking/typing/lambda_typed.move:56:21
   │
56 │             i = i + action(XVector::borrow(v, i)); // expected to have wrong result type
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected function of type `|integer|` but found `u64`
   ┌─ tests/checking/typing/lambda_typed.move:61:9
   │
61 │         x(1) // expected to be not a function
   │         ^^^^

error: cannot use `&u64` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/lambda_typed.move:67:43
   │
67 │         foreach(&v, |e: &u64| sum = sum + e) // expected to cannot infer type
   │                                           ^

error: expected function type returns value of type `()` but `u64` was provided
   ┌─ tests/checking/typing/lambda_typed.move:73:21
   │
73 │         foreach(&v, |e: &u64| { sum = sum + *e; *e }) // expected to have wrong result type of lambda
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
